--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
         <!-- Logo2 -->
     <img src="./img/logo productora 2.jpeg" alt="logo 4
     productora"class="logo">
+    
     <!-- Navbar/ Menu -->
     <nav class="navbar">
-        <label for="menu-toogle"></label>
+    <label for="menu-toogle">
+        <img src="./img/menu.png" alt="" class="menu-icon">
+    </label>
+    <input type="checkbox" id="menu-toogle">
         <ul class="navbar-list">
             <li><a href="#hero">Nosotros</a></li>
             <li><a href="#service">Servicios</a></li>
@@ -30,11 +34,6 @@
             <li><a href="#reseñas">Reseñas</a></li>
             <li><a href="#contacto">Contacto</a></li>   
         </ul>
-        <label for="menu-toogle">
-            <div class="menu-toogle">
-            <img src="./img/menu.png" alt="menu" class="menu-icon">
-            </div>
-        </label>
     </nav>
     </header>
     <main>
@@ -266,5 +265,5 @@
             </ul>
         </div>
         <p class="copyright">© 2024 Gaston Aveiro. All Rights Reserved</p>
-        </footer>
+    </footer>
 </body>
