footer styles.css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <!-- Navbar/ Menu -->
     <nav class="navbar">
-    <label for="menu-toogle">
+    <label for="menu-toogle" class="menu-label">
         <img src="./img/menu.png" alt="" class="menu-icon">
     </label>
     <input type="checkbox" id="menu-toogle">
@@ -112,7 +112,7 @@
                 </div>
                 <!---- Colaboraciones ---->
                 <div class="portfolio-item" data-category="colaboraciones">
-                    <img src="./portfolio musical/colaboraciones.png" alt="">
+                    <img src="./portfolio musical/colaboraciones 2.png" alt="">
                     <div class="portfolio-info">
                         <h4>colaboraciones</h4>
                         <p>Eventos conjuntos: Organizamos festivales, conciertos o presentaciones donde los artistas colaboran en el escenario. Incluyendo presentaciones en vivo, combinaciones de géneros musicales.
