logo query-tablet.css

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                         <h4>discografia</h4>
                         <p>
                         Baile que Baile (2023) – Rodri Aveiro. Producción musical: Gonzalo Gordillo. Filmación: Morena Martínez. Letra: Rodrigo Aveiro. Edición de video: Rodrigo Aveiro. (Argentina)
-                        <a href="https://youtu.be/qvbOfmKI7R0?si=tbcH1ze-LEm9OCj_">Rodri Aveiro X Gonza Gordillo</a>
+                        <a href="https://youtu.be/qvbOfmKI7R0?si=tbcH1ze-LEm9OCj_" target="_blank">Rodri Aveiro X Gonza Gordillo</a>
                         </p>
                         <p>
                         Lindo Día (2024) – Rodri Aveiro x Gonzalo Gordillo (versión cuarteto de Los Pericos). Letra: Juanchi Beleirón. Música, mezcla y máster: Gonzalo Gordillo. Videoclip y edición: Rodrigo Aveiro. (Colonia Las Rosas, Tunuyán)   
                         </p>
-                        <a href="https://youtu.be/O6m-SUz7znI?si=kssTCtmJEFmg5bJQ">Rodri Aveiro X Gonza Gordillo</a>
+                        <a href="https://youtu.be/O6m-SUz7znI?si=kssTCtmJEFmg5bJQ" target="_blank">Rodri Aveiro X Gonza Gordillo</a>
                     </div>
                 </div>
                 <!---- Conciertos y Eventos ---->
