equipo info p portfolio item img portfolio info h4 portfolio info p card-revison img card info name card info job card info reseña comment modificado query-notebook

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <img src="./portfolio musical/blog musical .png" alt="">
                     <div class="portfolio-info">
                         <h4>blog musical</h4>
-                        <p> Nos destacamos sobre los nuevos lanzamientos musicales(álbumes, sencillos y videos musicales). Ofrecemos a los seguidores una visión interna del proceso de grabación, colaboradores y fechas de lanzamiento. Incluimos enlaces a plataformas de streaming como: Spotify, Apple Music, YouTube,etc. Dónde los usuarios pueden escuchar o comprar las canciones y álbumes de nuestros artistas<p>
+                        <p> Nos destacamos sobre los nuevos lanzamientos musicales(álbumes, sencillos y videos musicales). Ofrecemos a los seguidores una visión interna del proceso de grabación, colaboradores y fechas de lanzamiento. Incluimos enlaces a plataformas de streaming como: Spotify, Apple Music, YouTube,etc. Dónde los usuarios pueden escuchar o comprar las canciones y álbumes de nuestros artistas.<p>
                     </div>
                 </div>
                 <!---- Colaboraciones ---->
