card revision contact info card info name card info reseña card info job card info job span comment modificado - query notebook

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <h3 class="card-info-name">Melina Martinez</h3>
                         <p class="card-info-job">
                         Intérprete en <span>GAV Producciones</span></p>
-                        <p class="comment">"GAV Producciones me dio el apoyo y la guía que necesitaba para mejorar mi sonido y posicionarme mejor en el mercado. ¡Altamente recomendable!"</p>
+                        <p class="comment">" GAV Producciones me dio el apoyo y la guía que necesitaba para mejorar mi sonido y posicionarme mejor en el mercado. ¡ Altamente recomendable" !</p>
                     </div>
                 </div>
                 <div class="card-revision">
@@ -180,7 +180,7 @@
                     <div class="card-info-reseña">
                         <h3 class="card-info-name">Sofia Tower</h3>
                         <p class="card-info-job">Productora y Dj en <span>GAV Producciones</span></p>
-                        <p class="comment">Cuando decidí trabajar con GAV Producciones, desde el primer día me sentí completamente apoyada y escuchada. Sin lugar a dudas, ¡volveré a trabajar con ellos!".</p>
+                        <p class="comment">" Cuando decidí trabajar con GAV Producciones, desde el primer día me sentí completamente apoyada y escuchada. Sin lugar a dudas, ¡ Volveré a trabajar con ellos" !</p>
                     </div>
                 </div>
                 <div class="card-revision">
@@ -188,7 +188,7 @@
                     <div class="card-info-reseña">
                         <h3 class="card-info-name">Lucas Avellaneda</h3>
                         <p class="card-info-job">Guitarrista en <span>GAV Producciones</span></p>
-                        <p class="comment">"Trabajar con GAV Producciones ha sido una de las experiencias más enriquecedoras de mi carrera.Demostraron una gran profesionalidad y compromiso, ¡los siguiré eligiendo!"</p>
+                        <p class="comment">" Trabajar con GAV Producciones ha sido una de las experiencias más enriquecedoras de mi carrera. Demostraron una gran profesionalidad y compromiso, ¡ Los siguiré eligiendo" !</p>
                     </div>
                 </div>
             </div>
